--- a/src/app/china-chart/china-chart.component.scss
+++ b/src/app/china-chart/china-chart.component.scss
@@ -1,4 +1,5 @@
 app-china-chart {
+
     #bar-chart {
         height: inherit;
         width: inherit;
@@ -28,5 +29,21 @@ app-china-chart {
           border-radius: 5px;
           text-align: center;
         }
+
+        @media only screen and (max-width: 768px) {
+
+            .text {
+                  font-family: sans-serif;
+                  fill:brown;
+                  // fill: #ffffff;
+                  font-size: 10px;
+                  text-anchor: middle;
+                }
+            
+            }
+                
+        
     }
-  }
+}
+
+  
