--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>D3 - Data Driven Documents Charts</h1>
-<hr><br />
+<hr>
 <h3><label>Select Country: </label>
     <select style="font-size: 18px; padding: 5px 15px;" (change)="navigateTo($event.target.value)">
         <option *ngFor="let chart of charts" [value]="chart.country">
@@ -7,7 +7,7 @@
         </option>
     </select>
 </h3>
-<div style="width:100%; margin-top: 50px;">
+<div style="width:100%;" class="mt-3">
     <!-- <app-bar-chart [data]="data"></app-bar-chart> -->
     <app-countries-chart *ngIf="countryChart"></app-countries-chart>
     <app-china-chart *ngIf="chinaChart"></app-china-chart>
