--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,4 +38,14 @@ app-vietnam-chart {
         width: 100%;
         height: 20em;
     }
+
+    h1 {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    h3 {
+        font-size: 16px;
+        text-align: center;
+    }
 }
