--- a/src/app/china-chart/china-chart.component.scss
+++ b/src/app/china-chart/china-chart.component.scss
@@ -28,8 +28,14 @@ app-china-chart {
           padding: 10px;
           border-radius: 5px;
           text-align: center;
+          pointer-events: none;
         }
 
+        hr {
+            margin: 5px!important;
+            padding: 0!important;
+          }
+          
         @media only screen and (max-width: 768px) {
 
             .text {
