--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <!-- <app-bar-chart [data]="data"></app-bar-chart> -->
     <app-countries-chart *ngIf="countryChart"></app-countries-chart>
     <app-china-chart *ngIf="chinaChart"></app-china-chart>
+    <app-northkorea-chart *ngIf="northkoreaChart"></app-northkorea-chart>
     <app-vietnam-chart *ngIf="vietnamChart"></app-vietnam-chart>
 </div>
 
